# RAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
data/html_files/: first.html
data/text_files/: ML_intro.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
faiss_store/: faiss.index  indexed_files.json  metadata.pkl
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  embedding.py  ingest.py  search.py  vectorstore.py
uuid_utils/: __init__.py
uuid_utils/compat/: __init__.py
