[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "sentence-transformers>=5.6.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
